--- a/css/index.css
+++ b/css/index.css
@@ -1602,10 +1602,10 @@ body::-webkit-scrollbar {
   margin: 10px;
   width: 30%;
   box-shadow: 0 0 0px #00000052;
-  padding: 15px;
+  padding: 20px;
   transition: 0.4s;
   text-align: center;
-  background: #fff;
+  /* background: #fff; */
   border: 1px solid #000;
   color: #000;
 }
@@ -1623,10 +1623,10 @@ body::-webkit-scrollbar {
   margin: 10px;
   width: 18%;
   box-shadow: 0 0 0px #00000052;
-  padding: 15px;
+  padding: 20px;
   transition: 0.4s;
   text-align: center;
-  background: #fff;
+  /* background: #fff; */
   border: 1px solid #000;
   color: #000;
 }
@@ -3155,61 +3155,3 @@ body::-webkit-scrollbar {
 .mt-5 {
   margin-top: 5px;
 }
-
-.carousel {
-  /* width: 80vw; */
-  height: 90vh;
-  /* border-radius: 3px; */
-  overflow: hidden;
-  position: relative;
-  /* box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2); */
-}
-.carousel:hover .controls {
-  opacity: 1;
-}
-.carousel .controls {
-  opacity: 0;
-  display: flex;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  justify-content: space-between;
-  width: 100%;
-  z-index: 99999;
-  transition: all ease 0.5s;
-}
-.carousel .controls .control {
-  margin: 0 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.7);
-  opacity: 0.5;
-  transition: ease 0.3s;
-  cursor: pointer;
-  line-height: 1;
-}
-.carousel .controls .control:hover {
-  opacity: 1;
-}
-.carousel .slides {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  display: flex;
-  width: 100%;
-
-  transition: 1s ease-in-out all;
-}
-.carousel .slides .slide {
-  min-width: 100%;
-  min-height: 250px;
-  height: auto;
-  padding: 15vh 7vw;
-}
-
-/*# sourceMappingURL=index.css.map */
