--- a/css/index.css
+++ b/css/index.css
@@ -3010,7 +3010,8 @@ img, figure{
   background-color: #000000;
   width: 100%;
   height: 0.1rem;
-  margin: 5rem 0;
+  margin: 0;
+  margin-bottom: 2rem;
 }
 
 .servicess__button {
