--- a/css/index.css
+++ b/css/index.css
@@ -292,7 +292,7 @@ body,
 .reasons__label,
 .blog__content__subheader {
   font-family: "Clash Display";
-  font-size: 4rem;
+  font-size: 3.25rem;
 }
 
 .careers .background__label{
@@ -1728,9 +1728,9 @@ img, figure{
 
 @media (max-width: 767px) {
   .background__title span {
-    font-size: 2rem;
+    /* font-size: 2rem;
     font-weight: 500;
-    margin-right: 1rem;
+    margin-right: 1rem; */
   }
 }
 
@@ -1872,8 +1872,9 @@ img, figure{
 .contacts {
   padding: 0 11.8rem;
   display: flex;
-  align-items: baseline;
+  align-items: flex-start;
   justify-content: space-between;
+  margin-top: 22rem;
 }
 
 @media (max-width: 1024px) {
@@ -1905,7 +1906,7 @@ img, figure{
 }
 
 .contacts__info__title {
-  margin-top: 21.5rem;
+  /* margin-top: 21.5rem; */
 }
 
 @media (max-width: 767px) {
@@ -1940,7 +1941,7 @@ img, figure{
   -ms-flex-pack: justify;
   justify-content: space-between;
   padding-bottom: 6rem;
-  margin-top: 10rem;
+  /* margin-top: 10rem; */
   width: 55%;
 }
 
@@ -2330,7 +2331,7 @@ img, figure{
 }
 
 .careers__info__title, .team__info__title {
-  margin-top: 21.5rem;
+  /* margin-top: 21.5rem; */
   font-family: inherit;
   font-size: 5rem;
 }
@@ -2536,8 +2537,10 @@ img, figure{
 .team {
   padding: 0 11.8rem;
   display: flex;
-  align-items: baseline;
+  align-items: flex-start;
   justify-content: space-between;
+  margin-top: 12rem;
+  margin-bottom: 2rem;
 }
 
 @media (max-width: 1024px) {
@@ -2554,13 +2557,13 @@ img, figure{
 }
 
 .team__info__title {
-  margin-top: 21.5rem;
+  /* margin-top: 21.5rem; */
 }
 
 @media (max-width: 1024px) {
-  .team__info__title {
+  /* .team__info__title {
     margin-top: 18rem;
-  }
+  } */
 }
 
 @media (max-width: 767px) {
@@ -3296,14 +3299,14 @@ img, figure{
 
 
 .c__title{
-  font-size: 3.5rem;
+  font-size: 3.25rem;
   font-weight: 500;
   margin-bottom: 3rem;
   line-height: 1;
 }
 .c__blurb p{
   padding-bottom: 20px;
-  font-size: 3rem;
+  font-size: 2.75rem;
 }
 
 .bg-white{
@@ -3364,4 +3367,9 @@ img, figure{
 #partners_slider .owl-stage {
   display: flex;
   align-items: center;
+}
+
+.aboutus .background__title,
+.aboutus .reasons__title{
+  margin-bottom: 3rem !important;
 }
