--- a/css/index.css
+++ b/css/index.css
@@ -3316,7 +3316,7 @@ img, figure{
 }
 
 .bg-white{
-   background-color: #ffffff;
+   /* background-color: #ffffff; */
 }
 
 #partners_slider .item{
