--- a/css/index.css
+++ b/css/index.css
@@ -370,13 +370,15 @@ body,
 @media (max-width: 767px) {
   .home__title,
   .blog__header__info__title {
-    font-size: 3rem;
+    font-size: 3.25rem;
   }
   .home__wrapper .item {
     padding: 35vh 4rem 4rem !important;
     height: 96vh !important;
 }
 }
+
+
 
 /* home 1st slider */
 
@@ -599,6 +601,7 @@ body::-webkit-scrollbar {
   text-transform: none;
   z-index: 4;
   width: 100%;
+  left: 0;
 }
 
 @media (max-width: 1024px) {
@@ -1037,6 +1040,17 @@ body::-webkit-scrollbar {
   }
 }
 
+@media (max-width: 567px) {
+  .services__grid__item__canvas {
+    height: auto !important;
+    opacity: 1 !important;
+    width: 100% !important;
+  }
+  .home__wrapper .item {
+    padding: 35vh 0rem 0rem !important;
+  }
+}
+
 .noise::before {
   background-image: url("../assets/noise.png");
   content: "";
@@ -1137,7 +1151,7 @@ body::-webkit-scrollbar {
 @media (max-width: 767px) {
   .home__arrow {
     bottom: 5rem;
-    right: 3rem;
+    right: 1rem;
   }
 }
 
@@ -1598,7 +1612,7 @@ body::-webkit-scrollbar {
     width: 100% !important;
   }
   .about {
-    min-height: 100vh;
+    min-height: 95vh;
     height: auto !important;
     position: relative;
   }
@@ -3354,7 +3368,11 @@ img, figure{
 }
 
 .bg-white{
-   /* background-color: #ffffff; */
+  /* background-color: #ffffff; */
+}
+
+.home .bg-white{
+  background-color: #ffffff;
 }
 
 #partners_slider .item{
