--- a/css/index.css
+++ b/css/index.css
@@ -2967,7 +2967,7 @@ img, figure{
 @media (max-width: 767px) {
   .servicess__title {
     font-size: 4rem;
-    white-space: nowrap;
+    /* white-space: nowrap; */
   }
 }
 
@@ -3067,6 +3067,7 @@ img, figure{
 }
   .servicess__categories__label{
     font-size: 2.5rem !important;
+    white-space: normal;
   }
 
   .categories__grid_title{
@@ -3443,10 +3444,14 @@ img, figure{
     left: 140%;
     transition: 0.4s;
     justify-content: flex-start;
-    background: #12bfbf;
+    background: #000;
     align-items: flex-start;
     padding: 7vh 3rem 3rem 3rem;
   }
+
+  .navigation__link {
+    color: #12bfbf !important;
+}
 
   .navigation__links.active{
     left: 0;
@@ -3455,6 +3460,8 @@ img, figure{
   #hamburger{
     position: sticky;
     z-index: 1000000;
+    color: #12bfbf !important;
+    font-size: 2.25rem;
   }
 
   .home-page #hamburger{
