--- a/css/index.css
+++ b/css/index.css
@@ -1053,7 +1053,11 @@ body::-webkit-scrollbar {
     width: 100% !important;
   }
   .home__wrapper .item {
-    padding: 35vh 0rem 0rem !important;
+    padding: 18vh 0rem 0rem !important;
+  }
+  .home__canvas {
+    padding-top: 40vh !important;
+    padding: 6rem;
   }
 }
 
@@ -1077,12 +1081,8 @@ body::-webkit-scrollbar {
   .home {
     padding: 0 2rem;
   }
-}
-
-@media (max-width: 767px) and (orientation: landscape) {
-  .home {
-    background-color: #000000;
-    height: auto;
+  .c-process{
+    padding-left: 1.5rem !important;
   }
 }
 
@@ -1171,11 +1171,6 @@ body::-webkit-scrollbar {
   z-index: 1;
 }
 
-@media (max-width: 767px) and (orientation: landscape) {
-  .home__canvas {
-    visibility: hidden;
-  }
-}
 
 .news {
   background-color: #000000;
