--- a/css/index.css
+++ b/css/index.css
@@ -1100,6 +1100,17 @@ body::-webkit-scrollbar {
   z-index: 2;
 }
 
+@media (min-width: 768px) {
+  .home::before{
+    content: "";
+    position: absolute;
+    background: #000;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+  }
+}
+
 @media (max-width: 767px) {
   .home {
     padding: 0 2rem;
