--- a/css/index.css
+++ b/css/index.css
@@ -657,6 +657,23 @@ body::-webkit-scrollbar {
   .navigation--dark .navigation__link {
     margin-right: 0;
   }
+
+  .navigation--dark .navigation__link:hover,
+  .navigation--dark .navigation__link:focus,
+  .navigation--dark .navigation__link:active {
+    color: #fff !important;
+  }
+
+  .navigation__links.active::after{
+    content: "";
+    width: 15rem;
+    height: 5rem;
+    background-image: url(../assets/logo-white.png);
+    background-size: cover;
+    position: absolute;
+    top: 3rem;
+    left: 3rem;
+  }
 }
 
 .navigation--dark .navigation__button {
@@ -1769,7 +1786,8 @@ img, figure{
 }
 
 .values-row .value-item:hover,
-.values-row .value-item:focus {
+.values-row .value-item:focus,
+.values-row .value-item:active {
   box-shadow: 0 0 15px #00000052;
   transform: scale(1.05) translateY(-10px);
 }
@@ -1940,12 +1958,14 @@ img, figure{
 }
 
 .reasons__grid__item:hover,
-.reasons__grid__item:focus {
+.reasons__grid__item:focus,
+.reasons__grid__item:active {
   background-color: #ffffff;
 }
 
 .reasons__grid__item:hover .reasons__grid__item__label,
-.reasons__grid__item:focus .reasons__grid__item__label {
+.reasons__grid__item:focus .reasons__grid__item__label,
+.reasons__grid__item:active .reasons__grid__item__label {
   color: #000000;
   font-weight: 500;
 }
@@ -3410,13 +3430,15 @@ img, figure{
 }
 
 .c-process-list .c__item:hover:before,
-.c-process-list .c__item:focus:before {
+.c-process-list .c__item:focus:before,
+.c-process-list .c__item:active:before  {
   background-color: #12c0c0;
   color: #fff;
 }
 
 .c-process-list .c__item:hover .c-process,
-.c-process-list .c__item:focus .c-process {
+.c-process-list .c__item:focus .c-process,
+.c-process-list .c__item:active .c-process {
   color: #12c0c0;
 }
 
