--- a/css/index.css
+++ b/css/index.css
@@ -664,7 +664,8 @@ body::-webkit-scrollbar {
     color: #fff !important;
   }
 
-  .navigation__links::after{
+
+  /* .navigation__links::after{
     content: "";
     width: 15rem;
     height: 5rem;
@@ -673,7 +674,7 @@ body::-webkit-scrollbar {
     position: absolute;
     top: 3rem;
     left: 3rem;
-  }
+  } */
 }
 
 .navigation--dark .navigation__button {
@@ -1689,7 +1690,7 @@ body::-webkit-scrollbar {
 }
 
 @media (min-width: 768px) {
-  #hamburger{
+  #hamburger, #hamburger-close{
     display: none;
   }
 }
@@ -3522,7 +3523,7 @@ img, figure{
 }
 
 @media (max-width: 767px){
-  .navigation__links{
+  #mobile_navigation{
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -3532,28 +3533,36 @@ img, figure{
     justify-content: center;
     background: #000;
     align-items: center;
-    padding: 1rem 3rem 1rem 3rem;
+    padding: 0;
     z-index: 10000;
     text-align: center;
   }
 
-  .navigation__link {
+  #mobile_navigation .navigation__link {
     color: #12bfbf !important;
 }
 
-  .navigation__links.active{
+  #mobile_navigation.active{
     left: 0;
   }
 
-  #hamburger{
+  .navigation__links{
+    display: none;
+  }
+  
+  #mobile_navigation .navigation__links{
+    display: flex;
+    align-items: center;
+    padding-top: 70px;
+    height: 100%;
+    justify-content: center;
+  }
+
+  #hamburger, #hamburger-close{
     position: sticky;
     z-index: 1000000;
     color: #12bfbf !important;
     font-size: 3.25rem;
-  }
-
-  .home-page #hamburger{
-    color: #fff;
   }
 
   .navigation{
@@ -3563,6 +3572,7 @@ img, figure{
   .navigation__links a {
     padding-top: 3vh !important;
     font-size: 8vw;
+    font-weight: 800;
     white-space: normal !important;
     line-height: 1.1;
     display: block;
