--- a/css/index.css
+++ b/css/index.css
@@ -1804,7 +1804,7 @@ img, figure{
 .values-row .value-item:active {
   box-shadow: 0 0 15px #00000052;
   transform: scale(1.05) translateY(-10px);
-  background-color: #12c0c0;
+  /* background-color: #12c0c0; */
 }
 
 .value-item img {
