--- a/css/index.css
+++ b/css/index.css
@@ -3588,10 +3588,14 @@ img, figure{
   .navigation__links a {
     padding-top: 3vh !important;
     font-size: 8vw;
-    font-weight: 800;
+    /* font-weight: 800; */
+    font-family: "Clash Display";
     white-space: normal !important;
     line-height: 1.1;
     display: block;
+}
+.navigation__links ul li a {
+  font-size: 5.75vw;
 }
 
 .navigation__links a:hover,
